--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ dist/
 *.njsproj
 *.sln
 *.sw?
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
